# oxiblas

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
crates/oxiblas/: Cargo.toml  README.md  TODO.md
crates/oxiblas-benchmarks/: Cargo.toml  README.md  TODO.md
crates/oxiblas-benchmarks/benches/: advanced_features.rs  blas_level1.rs  blas_level2.rs  blas_level3.rs  comparison.rs  lapack_evd.rs  lapack_factorization.rs  lapack_qr.rs  lapack_solve.rs  lapack_svd.rs  new_features.rs  precision_bench.rs  size_variations.rs  sparse_eigen_svd.rs  sparse_ops.rs
crates/oxiblas-benchmarks/src/: lib.rs  quick_perf.rs  regression.rs
crates/oxiblas-blas/: Cargo.toml  README.md  TODO.md
crates/oxiblas-blas/src/: accuracy.rs  complex_interleaved.rs  lib.rs  ndtensor.rs  tensor.rs
crates/oxiblas-blas/src/cblas/: basic.rs  mod.rs  triangular_symmetric.rs  types.rs
crates/oxiblas-blas/src/level1/: asum.rs  axpy.rs  copy.rs  dot.rs  dot_extended.rs  iamax.rs  mod.rs  nrm2.rs  parallel.rs  rot.rs  scal.rs
crates/oxiblas-blas/src/level2/: gbmv.rs  gemv.rs  ger.rs  hbmv.rs  hemv.rs  her.rs  her2.rs  hpmv.rs  hpr.rs  hpr2.rs  mod.rs  sbmv.rs  spmv.rs  spr.rs  spr2.rs  symv.rs  syr.rs  syr2.rs  tbmv.rs  tbsv.rs  tpmv.rs  tpsv.rs  trmv.rs  trsv.rs
crates/oxiblas-blas/src/level3/: autotune.rs  batched.rs  complex_gemm.rs  gemm.rs  gemm_cache_oblivious.rs  gemm_kernel.rs  gemm_kernel_sse42.rs  gemm_packing.rs  gemm_small.rs  gemm_winograd.rs  gemmt.rs  hemm.rs  her2k.rs  herk.rs  mod.rs  runtime_autotune.rs  strassen.rs  symm.rs  syr2k.rs  syrk.rs  trmm.rs
crates/oxiblas-blas/src/level3/trsm/: complex32.rs  complex64.rs  generic.rs  mod.rs  types.rs
crates/oxiblas-core/: Cargo.toml  README.md  TODO.md
crates/oxiblas-core/benches/: blocking.rs  simd.rs
crates/oxiblas-core/src/: blocking.rs  lib.rs  parallel.rs  scalar.rs  simd.rs  tuning.rs
crates/oxiblas-core/src/memory/: aligned_vec.rs  alloc.rs  arena.rs  mod.rs  numa.rs  pool.rs  stack.rs
crates/oxiblas-core/src/scalar/: batch.rs  complex.rs  complex_impl.rs  extended.rs  mod.rs  real_impl.rs  tests.rs  traits.rs
crates/oxiblas-core/src/simd/: aarch64.rs  complex.rs  dispatch.rs  multiver.rs  scalar.rs  wasm32.rs  x86_64.rs
crates/oxiblas-ffi/: Cargo.toml  README.md  TODO.md  build.rs  cbindgen.toml
crates/oxiblas-ffi/src/: lib.rs  types.rs
crates/oxiblas-ffi/src/blas1/: complex.rs  mod.rs  real.rs
crates/oxiblas-ffi/src/blas2/: banded.rs  general.rs  helpers.rs  mod.rs  packed.rs  symmetric_triangular.rs
crates/oxiblas-ffi/src/blas3/: basic.rs  complex.rs  mod.rs  triangular_rank.rs
crates/oxiblas-ffi/src/lapack/: bandmatrix.rs  condition.rs  determinant.rs  eigen.rs  factorization.rs  gevd.rs  hessenberg.rs  inverse.rs  kronecker.rs  ldlt.rs  lufullpiv.rs  matfun.rs  mod.rs  norms.rs  orthogonal.rs  pseudoinverse.rs  qrpivot.rs  qz.rs  rank.rs  schur.rs  subspace.rs  svd.rs  trace.rs  tridiagonal.rs
crates/oxiblas-ffi/src/lapack/solve/: basic_solve.rs  expert.rs  mod.rs  refinement.rs
crates/oxiblas-lapack/: Cargo.toml  README.md  TODO.md
crates/oxiblas-lapack/src/: error.rs  info.rs  lib.rs  workspace.rs
crates/oxiblas-lapack/src/cholesky/: aasen.rs  band.rs  bunch_kaufman.rs  hermitian.rs  ldlt.rs  llt.rs  mod.rs  packed.rs
crates/oxiblas-lapack/src/evd/: balance.rs  complex_general.rs  complex_hessenberg.rs  complex_schur.rs  general.rs  generalized.rs  hermitian.rs  hermitian_dc.rs  hessenberg.rs  mod.rs  mrrr.rs  parallel_evd.rs  qz.rs  randomized.rs  schur.rs  symmetric.rs  symmetric_dc.rs  tridiag_evd.rs
crates/oxiblas-lapack/src/lu/: band.rs  full_piv.rs  mod.rs  partial_piv.rs  rook_piv.rs
crates/oxiblas-lapack/src/qr/: col_pivot.rs  complete_orthogonal.rs  householder.rs  lq.rs  mod.rs  ortho.rs  ql.rs  rq.rs  unitary.rs
crates/oxiblas-lapack/src/solve/: expert.rs  expert_cholesky.rs  expert_symmetric.rs  general.rs  iterative_refinement.rs  least_squares.rs  mixed_precision.rs  mod.rs  triangular.rs  tridiagonal.rs
crates/oxiblas-lapack/src/svd/: bidiag_reduce.rs  bidiagonal.rs  complex.rs  complex_bidiag.rs  complex_dc.rs  divide_conquer.rs  mod.rs  parallel_svd.rs  qr_based.rs  randomized.rs  selective.rs  truncated.rs
crates/oxiblas-lapack/src/utils/: condition.rs  determinant.rs  equilibrate.rs  error_bounds.rs  inverse.rs  kronecker.rs  mod.rs  norms.rs  rank_null.rs
crates/oxiblas-lapack/src/utils/matfun/: functions.rs  mod.rs  (+2 more)
crates/oxiblas-lapack/tests/: lapack_compat.rs
crates/oxiblas-matrix/: Cargo.toml  README.md  TODO.md
crates/oxiblas-matrix/src/: banded.rs  cow.rs  lazy.rs  lib.rs  mat.rs  mat_mut.rs  mat_ref.rs  mmap.rs  nalgebra_compat.rs  ops.rs  packed.rs  prefetch.rs  symmetric.rs  triangular.rs
crates/oxiblas-matrix/tests/: blas_compat_tests.rs  property_tests.rs
crates/oxiblas-ndarray/: Cargo.toml  README.md  TODO.md
crates/oxiblas-ndarray/benches/: faer_comparison.rs  ndarray_blas.rs
crates/oxiblas-ndarray/src/: blas.rs  conversions.rs  lapack.rs  lib.rs  parallel.rs  sparse.rs
crates/oxiblas-sparse/: Cargo.toml  README.md  TODO.md
crates/oxiblas-sparse/src/: bsc.rs  bsr.rs  convert.rs  coo.rs  csc.rs  csr.rs  dia.rs  ell.rs  hyb.rs  lib.rs  mtx.rs  sell.rs  stochastic.rs  test_matrices.rs
crates/oxiblas-sparse/src/graph/: functions.rs  types.rs
crates/oxiblas-sparse/src/linalg/: cholesky.rs  convergence.rs  lu.rs  mod.rs  multifrontal_cholesky.rs  multifrontal_lu.rs  out_of_core.rs  pivoting.rs  qr.rs  sparse_qr.rs  supernodal.rs  triangular.rs
crates/oxiblas-sparse/src/ops/: functions.rs  types.rs
crates/oxiblas-sparse/tests/: convergence_tests.rs  memory_usage_tests.rs  precond_tests.rs  suitesparse_matrices.rs
crates/oxiblas/benches/: gemm_bench.rs
crates/oxiblas/examples/: basic_blas.rs  cholesky_bench.rs  complex_gemm_bench.rs  extended_precision.rs  lapack_decompositions.rs  lu_bench.rs  parallel_bench.rs  sparse_matrices.rs  symm_hemm_bench.rs  syrk_syr2k_bench.rs  tensor_operations.rs  trmm_trsm_bench.rs
crates/oxiblas/src/: auto.rs  builder.rs  fluent.rs  lib.rs
(+56 files in other folders)
