[workspace]
resolver = "2"
members = [
    "crates/oxiblas-core",
    "crates/oxiblas-matrix",
    "crates/oxiblas-blas",
    "crates/oxiblas-lapack",
    "crates/oxiblas",
    "crates/oxiblas-ndarray",
    "crates/oxiblas-sparse",
    "crates/oxiblas-benchmarks",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/oxiblas"
authors = ["COOLJAPAN OU <contact@cooljapan.tech>"]

[workspace.dependencies]
# Internal crates
oxiblas-core = { path = "crates/oxiblas-core", version = "0.2.0", default-features = false }
oxiblas-matrix = { path = "crates/oxiblas-matrix", version = "0.2.0", default-features = false }
oxiblas-blas = { path = "crates/oxiblas-blas", version = "0.2.0" }
oxiblas-lapack = { path = "crates/oxiblas-lapack", version = "0.2.0" }
oxiblas-sparse = { path = "crates/oxiblas-sparse", version = "0.2.0" }
oxiblas = { path = "crates/oxiblas", version = "0.2.0" }
oxiblas-ndarray = { path = "crates/oxiblas-ndarray", version = "0.2.0" }
# oxiblas-ffi has been retired as of v0.2.0 (Pure Rust ecosystem)

# Essential dependencies
num-complex = { version = "0.4", features = ["bytemuck"] }
num-traits = "0.2"
bytemuck = { version = "1.25", features = ["derive"] }

# Optional dependencies
rayon = "1.11"
ndarray = "0.17"
nalgebra = "0.33"
twofloat = "0.8"
half = { version = "2.7", features = ["num-traits", "bytemuck"] }
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
memmap2 = "0.9"

# Dev dependencies
criterion = "0.8"
rand = "0.9"
approx = "0.5"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "allow"  # Rust 2024 defaults to requiring unsafe blocks; we allow for now

[workspace.lints.clippy]
all = "warn"
# Pedantic and nursery are disabled by default - too many false positives
# for numerical code with BLAS naming conventions
# pedantic = "warn"
# nursery = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
