[package]
name = "oxiblas-benchmarks"
description = "Benchmarks for OxiBLAS - Pure Rust BLAS/LAPACK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["benchmark", "blas", "lapack", "linear-algebra", "performance"]
categories = ["mathematics", "science", "development-tools::profiling"]
# Dev/benchmark-only crate: kept off crates.io so the optional `compare-openblas`
# comparison bench (openblas-src/cblas-sys/lapack-sys/ndarray-linalg/blas-src) stays
# out of the published Pure-Rust audit surface.
# Run it with: cargo bench -p oxiblas-benchmarks --features compare-openblas
publish = false

[dependencies]
oxiblas-core = { workspace = true, features = ["std", "f16", "parallel"] }
oxiblas-matrix = { workspace = true, features = ["std"] }
oxiblas-blas = { workspace = true, features = ["parallel"] }
oxiblas-lapack.workspace = true
oxiblas-sparse.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Optional: For comparison benchmarks with other BLAS implementations
ndarray = { workspace = true, optional = true }
ndarray-linalg = { version = "0.18", optional = true, features = ["openblas-system"] }
blas-src = { version = "0.14", optional = true, features = ["openblas"] }
cblas-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
num-complex.workspace = true
half.workspace = true

[features]
default = []
# Enable comparison benchmarks with OpenBLAS (BSD-3-Clause license, compatible)
compare-openblas = ["ndarray", "ndarray-linalg", "blas-src", "cblas-sys"]

[[bin]]
name = "regress"
path = "src/bin/regress.rs"

[[bench]]
name = "blas_level1"
harness = false

[[bench]]
name = "blas_level2"
harness = false

[[bench]]
name = "blas_level3"
harness = false

[[bench]]
name = "lapack_qr"
harness = false

[[bench]]
name = "lapack_svd"
harness = false

[[bench]]
name = "new_features"
harness = false

[[bench]]
name = "comparison"
harness = false
required-features = ["compare-openblas"]

[[bench]]
name = "advanced_features"
harness = false

[[bench]]
name = "lapack_factorization"
harness = false

[[bench]]
name = "lapack_evd"
harness = false

[[bench]]
name = "lapack_solve"
harness = false

[[bench]]
name = "sparse_ops"
harness = false

[[bench]]
name = "sparse_eigen_svd"
harness = false

[[bench]]
name = "size_variations"
harness = false

[[bench]]
name = "precision_bench"
harness = false
