[package]
name = "oxiblas-core"
description = "Core traits and SIMD abstractions for OxiBLAS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["blas", "lapack", "simd", "linear-algebra", "numerics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
bytemuck.workspace = true
rayon = { workspace = true, optional = true }
half = { workspace = true, optional = true, features = ["num-traits", "bytemuck"] }
twofloat = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["std"]
std = ["libc"]
parallel = ["rayon", "std"]
f16 = ["half"]  # Half-precision (16-bit float) support
f128 = ["dep:twofloat"]  # Quad-precision (double-double) support
nightly = []  # Enable nightly-only optimizations

# SIMD control features
force-scalar = []  # Force scalar operations, disable all SIMD (useful for debugging)
max-simd-128 = []  # Limit SIMD to 128-bit (SSE/NEON) maximum
max-simd-256 = []  # Limit SIMD to 256-bit (AVX2) maximum

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "blocking"
harness = false

[lints]
workspace = true
