[package]
name = "oxiblas-ndarray"
description = "ndarray integration for OxiBLAS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["blas", "lapack", "ndarray", "linear-algebra", "matrix"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
oxiblas-core.workspace = true
oxiblas-matrix.workspace = true
oxiblas-blas.workspace = true
oxiblas-lapack.workspace = true
oxiblas-sparse = { workspace = true, optional = true }
ndarray.workspace = true
num-complex.workspace = true
bytemuck.workspace = true

[features]
default = ["oxiblas-core/std", "oxiblas-matrix/std"]
parallel = ["oxiblas-blas/parallel", "oxiblas-core/parallel"]
sparse = ["dep:oxiblas-sparse"]

[dev-dependencies]
criterion.workspace = true
faer = "0.23"

[[bench]]
name = "ndarray_blas"
harness = false

[[bench]]
name = "faer_comparison"
harness = false

[lints]
workspace = true
