[package]
name = "oxiblas"
description = "OxiBLAS - Pure Rust BLAS/LAPACK implementation for the scirs2 ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["blas", "lapack", "linear-algebra", "simd", "matrix"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
oxiblas-core.workspace = true
oxiblas-matrix.workspace = true
oxiblas-blas.workspace = true
oxiblas-lapack.workspace = true
oxiblas-sparse = { workspace = true, optional = true }
oxiblas-ndarray = { workspace = true, optional = true }
half = { workspace = true, optional = true }
bytemuck.workspace = true
num-traits.workspace = true

[features]
default = ["sparse", "oxiblas-core/std", "oxiblas-matrix/std"]
parallel = ["oxiblas-core/parallel", "oxiblas-blas/parallel", "oxiblas-lapack/parallel", "oxiblas-sparse?/parallel", "oxiblas-ndarray?/parallel"]
f16 = ["oxiblas-core/f16", "dep:half"]
f128 = ["oxiblas-core/f128"]
ndarray = ["dep:oxiblas-ndarray"]
sparse = ["dep:oxiblas-sparse"]
serde = ["oxiblas-matrix/serde"]
mmap = ["oxiblas-matrix/mmap"]
nalgebra = ["oxiblas-matrix/nalgebra"]  # nalgebra type conversions
full = ["parallel", "f16", "f128", "ndarray", "sparse", "serde", "mmap", "nalgebra"]

# SIMD control features (propagate to oxiblas-core, oxiblas-blas, oxiblas-lapack)
force-scalar = ["oxiblas-core/force-scalar", "oxiblas-blas/force-scalar", "oxiblas-lapack/force-scalar"]  # Disable all SIMD
max-simd-128 = ["oxiblas-core/max-simd-128", "oxiblas-blas/max-simd-128", "oxiblas-lapack/max-simd-128"]  # Limit to 128-bit SIMD
max-simd-256 = ["oxiblas-core/max-simd-256", "oxiblas-blas/max-simd-256", "oxiblas-lapack/max-simd-256"]  # Limit to 256-bit SIMD

[dev-dependencies]
criterion.workspace = true
num-complex.workspace = true

[[bench]]
name = "gemm_bench"
harness = false

[[example]]
name = "parallel_bench"
required-features = ["parallel"]

[[example]]
name = "sparse_matrices"
required-features = ["sparse"]

[lints]
workspace = true
